add package required for zeit platform

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql": "^15.0.0",
     "graphql-import-node": "0.0.4",
     "graphql-playground-middleware-express": "^1.7.14",
+    "graphql-tag-pluck": "^0.8.7",
     "graphql-tools": "^5.0.0",
     "http": "0.0.1-security",
     "lodash": "^4.17.15",
